welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:12: error: Unmatched closing brace '}' ignored here
	}
        ^Runner:13: error: eof expected but '}' found.
}
^